add table contents

--- a/_posts/2018-08-17-環境建置、編輯器安裝與版本控制介紹.md
+++ b/_posts/2018-08-17-環境建置、編輯器安裝與版本控制介紹.md
@@ -5,3 +5,47 @@ categories: content
 tags:
   - Python3
 ---
+
+0. [Hello, Python](#hello-python) 
+    0. [簡介](#簡介)  
+    0. [Python2? Python3?](#python2-python3)
+    0. [Python vs. Anaconda vs. Miniconda](#python-vs-anaconda-vs-miniconda)
+
+0. [環境建置](#環境建置)
+    0. [Python](#python)
+    0. [Anaconda](#anaconda)
+    0. [Miniconda](#miniconda)
+0. [編輯器](#編輯器)
+    0. [Sublime Text 3](#sublime-text-3)
+    0. [Atom](#atom)
+    0. [VSCode](#vscode)
+    0. [PyCharm](#pycharm)
+    0. [Spyder](#spyder)
+    0. [VIM](#vim)
+0. [版本控制: Git](#版本控制-git)
+    0. [介紹](#介紹) 
+    0. [基本指令](#基本指令)
+
+<!---
+## Hello, Python
+### 簡介
+### Python2? Python3?
+### Python vs. Anaconda
+
+## 環境建置
+### Python
+### Anaconda
+### Miniconda
+
+## 編輯器
+### Sublime Text 3
+### Atom
+### VSCode
+### PyCharm
+### Spyder
+### VIM
+
+## 版本控制: Git
+### 介紹
+### 基本指令
+-->
