--- a/_posts/2018-09-26-程式編寫與執行基本概念.md
+++ b/_posts/2018-09-26-程式編寫與執行基本概念.md
@@ -5,3 +5,13 @@ categories: content
 tags:
   - Python3
 ---
+
+0. [程式編寫](#程式編寫)
+    0. REPL
+    0. Command-line
+0. [程式執行](#程式執行)
+
+<!---
+## 程式編寫
+## 程式執行
+-->
