--- a/_posts/2018-09-26-程式編寫與執行基本概念.md
+++ b/_posts/2018-09-26-程式編寫與執行基本概念.md
@@ -7,11 +7,30 @@ tags:
 ---
 
 0. [程式編寫](#程式編寫)
-    0. REPL
+    0. REPL(互動式視窗)
     0. Command-line
 0. [程式執行](#程式執行)
+    0. .py? .pyc?
 
-<!---
 ## 程式編寫
+
+```python
+def foobar():
+    print('Hello, World!')
+
+foobar()
+```
+
+在 Python3 中，你也可以用中文編寫（但這不見得是件好事）
+
+```Python
+def 富爸():
+    print('哈囉，沃爾德！')
+
+富爸()
+```
+
+>
+[Python vs Cpython](#https://stackoverflow.com/q/17130975/1105489)
+
 ## 程式執行
--->
