--- a/_posts/2018-09-26-程式編寫與執行基本概念.md
+++ b/_posts/2018-09-26-程式編寫與執行基本概念.md
@@ -6,11 +6,23 @@ tags:
   - Python3
 ---
 
+0. [直譯器](#直譯器)
 0. [程式編寫](#程式編寫)
-    0. REPL(互動式視窗)
-    0. Command-line
 0. [程式執行](#程式執行)
-    0. .py? .pyc?
+    0. [REPL](#repl)
+    0. [Command-Line](#command-line)
+0. [延伸閱讀](#延伸閱讀)
+
+---
+
+## 直譯器
+
+[直譯器 (Interpreter)][wiki-interpreter] 是一種可以把程式轉譯成另一種語言的程式。
+在Python中，所有的原始碼 (source code) 都會先轉譯成[位元組碼 (byte code)][wiki-byte-code]，才能被執行。
+
+![Python runtime execution model]({{ site.pfh_path }}/assets/img/Python_runtime_execution_model.png)
+
+---
 
 ## 程式編寫
 
@@ -30,7 +42,22 @@ def 富爸():
 富爸()
 ```
 
->
-[Python vs Cpython](#https://stackoverflow.com/q/17130975/1105489)
+---
 
 ## 程式執行
+
+### REPL
+
+REPL (互動式視窗) 的全名為 Read-Eval-Print Loop
+
+### Command-Line
+
+---
+
+## 延伸閱讀
+
+- [Python vs Cpython](#https://stackoverflow.com/q/17130975/1105489)
+
+
+[wiki-interpreter]: https://zh.wikipedia.org/zh-tw/直譯器
+[wiki-byte-code]: https://zh.wikipedia.org/zh-tw/字节码 
