--- a/_posts/2018-08-17-環境建置、編輯器安裝與版本控制介紹.md
+++ b/_posts/2018-08-17-環境建置、編輯器安裝與版本控制介紹.md
@@ -3,49 +3,111 @@ layout: post_pfh
 date:   2018-08-17 20:10:32 +0800
 categories: content 
 tags:
-  - Python3
+  - Python3, GIT
 ---
 
-0. [Hello, Python](#hello-python) 
-    0. [簡介](#簡介)  
-    0. [Python2? Python3?](#python2-python3)
-    0. [Python vs. Anaconda vs. Miniconda](#python-vs-anaconda-vs-miniconda)
 
-0. [環境建置](#環境建置)
-    0. [Python](#python)
-    0. [Anaconda](#anaconda)
-    0. [Miniconda](#miniconda)
-0. [編輯器](#編輯器)
-    0. [Sublime Text 3](#sublime-text-3)
-    0. [Atom](#atom)
-    0. [VSCode](#vscode)
-    0. [PyCharm](#pycharm)
-    0. [Spyder](#spyder)
-    0. [VIM](#vim)
-0. [版本控制: Git](#版本控制-git)
-    0. [介紹](#介紹) 
-    0. [基本指令](#基本指令)
-
-<!---
 ## Hello, Python
+
 ### 簡介
+
+Python 的原作者是一個叫做Guido van Rossum 的荷蘭人。  
+很多人可能以為Python 是個相對較新的語言，不過其實它比 Java 提早了四年發行呢！
+
 ### Python2? Python3?
-### Python vs. Anaconda
+有些人可能會問：到底該用 Python2 還是 Python3 呢？  
+當然是 Python3！
+
+Python2 的大限將至，甚至有專門為 [Python2 死亡倒數設計的網站](https://pythonclock.org/)呢！  
+其實Python2不會「死亡」，只是在2020年後，就不會再被維護了。
+
+### Python vs. Anaconda vs. Miniconda
+
+如果是新手的話，建議直接裝 Anaconda
+
+---
 
 ## 環境建置
+
 ### Python
+
 ### Anaconda
+
 ### Miniconda
 
+---
+
 ## 編輯器
+
+工欲善其事，必先利其器，不過編輯器百百種，到底該選哪一個好呢？  
+先來看看[大家都在用什麼編輯器吧](https://insights.stackoverflow.com/survey/2018#technology-most-popular-development-environments)！  
+以下列出我個人使用過的編輯器，並做一些簡單的說明。  
+先講結論：黑喵白喵能寫 Python 的就是好喵！
+
 ### Sublime Text 3
+
 ### Atom
+
 ### VSCode
+
 ### PyCharm
+
 ### Spyder
+
 ### VIM
 
-## 版本控制: Git
+
+綜合以上結論
+沒有哪一個是所謂「最好」的編輯器，只有「最順手」的編輯器。
+
+---
+
+
+## 版本控制: GIT
 ### 介紹
+
+GIT 是一個版本控制的工具，很多人以為他是某種縮寫，但其實他就是隨機的三個英文字母的組合。
+所以他到底是什麼意思呢？  
+根據 GIT 的 [提交紀錄](https://github.com/git/git/blob/e83c5163316f89bfbde7d9ab23ca2e25604af290/README)：
+> GIT - the stupid content tracker
+
+而他確切的意思是：
+> "git" can mean anything, depending on your mood.
+
+就是沒有任何意思的意思。
+
+那麼這個神奇的工具是誰發明的呢？就是發明 Linux 那個人—— Linus Torvalds 。
+
+
 ### 基本指令
--->
+
+`GIT` 的指令非常的豐富，不可能在一朝一夕全部記起來，
+不過以下這些指令是最基本且最常用的。
+
+查看當前目錄 GIT 專案的狀態：
+
+```bash
+git status
+```
+
+把 `foo.py` 增加到 GIT 中：
+```bash
+git add foo.py
+```
+
+簡述這次檔案的新增/變動的內容為何：
+```bash
+git commit -m 'this is a commit message'
+```
+
+將遠端 master 這個分支上所有的變動同步到本機器：
+```bash
+git pull origin master
+```
+
+提交到遠端的 master 這個分支上：
+```bash
+git push origin master
+```
+
+
