--- a/_posts/2018-09-26-程式編寫與執行基本概念.md
+++ b/_posts/2018-09-26-程式編寫與執行基本概念.md
@@ -16,6 +16,20 @@ tags:
 
 ---
 
+## Python 實作
+
+我們講**Python** 指的其實是**語言本身**，而為了讓電腦真正能夠讀懂 Python 這個語言，
+就要看背後是怎麼**實作**這個語言。
+
+基本上，我們平常用的 Python 是透過 **CPython** ，也就是 `C`語言的實作，來讓電腦理解我們的原始碼。
+那 Python 還有哪些其他的實作呢？
+
+- Jython - 用 Java 實作的 Python
+- IronPython - 用.NET 實作的 Python
+- PyPy - 用 Python 實作的 Python
+
+---
+
 ## 程式編寫
 
 ```python
