--- a/_posts/2018-08-17-環境建置、編輯器安裝與版本控制介紹.md
+++ b/_posts/2018-08-17-環境建置、編輯器安裝與版本控制介紹.md
@@ -12,7 +12,16 @@ tags:
 ### 簡介
 
 Python 的原作者是一個叫做Guido van Rossum 的荷蘭人。  
+Python (蟒蛇) 其實跟*蛇* 一點關係都沒有，是因為 Guido 很喜歡一個叫做 Monty Python 的喜劇，所以愛是不需要理由的。  
 很多人可能以為Python 是個相對較新的語言，不過其實它比 Java 提早了四年發行呢！
+
+想要了解 Python 的理念，你只需要在 console 下執行
+
+```bash
+python -c "import this"
+```
+
+你就會看到一堆句子，找時間把每一句話都讀過一遍吧！
 
 ### Python2? Python3?
 有些人可能會問：到底該用 Python2 還是 Python3 呢？  
