--- a/_posts/2018-08-17-環境建置、編輯器安裝與版本控制介紹.md
+++ b/_posts/2018-08-17-環境建置、編輯器安裝與版本控制介紹.md
@@ -30,19 +30,27 @@ python -c "import this"
 Python2 的大限將至，甚至有專門為 [Python2 死亡倒數設計的網站](https://pythonclock.org/)呢！  
 其實Python2不會「死亡」，只是在2020年後，就不會再被維護了。
 
-### Python vs. Anaconda vs. Miniconda
-
-如果是新手的話，建議直接裝 Anaconda
 
 ---
 
 ## 環境建置
 
+如果是新手的話，建議直接裝 Anaconda，因為它從從環境到 IDE 通通都包進去了，算是一個一勞永逸的方案，
+不過就是因為它包山包海，所以會佔去電腦一部分空間，而且很多東西不一定都會用到。
+另外，它畢竟不是官方，所以有些套件上可能不會是最新的，不過它的使用者眾多，所以其實不太需要擔心這個議題。
+
 ### Python
+
+不管你是 Windows, Mac 或 Linux 使用者，直接進入[官方下載頁面](https://www.anaconda.com/download/)，
+按照指示一步一步照著做
+
 
 ### Anaconda
 
-### Miniconda
+不管你是 Windows, Mac 或 Linux 使用者，直接進入[官方下載頁面](https://www.anaconda.com/download/)，
+按照指示一步一步照著做，就可以無腦安裝成功！不過因為 Anaconda 包山包海，所以可能過程會有點耗時，
+但是一勞永逸，而且之後就不太需要擔心相依性的問題，所以等待也是值得的啦！
+
 
 ---
 
