--- a/_posts/2018-10-03-語法結構與基本資料型態（I）.md
+++ b/_posts/2018-10-03-語法結構與基本資料型態（I）.md
@@ -5,3 +5,44 @@ categories: content
 tags:
   - Python3
 ---
+
++ module (模組)
++ statement (陳述)
++ expression (運算式)
+
+## Numbers (數字)
+
++ `int`
++ `float`
++ `complex`
+
+## Strings (字串)
+
+## Lists (串列)
+
+## Tuples (元組)
+
+```
+>>> a = ('a', 'b')
+>>> type(a)
+<class 'tuple'>
+```
+
+```
+>>> a = ('a')
+>>> type(a)
+<class 'str'>
+```
+
+```
+>>> a = ('a', )
+>>> type(a)
+<class 'tuple'>
+```
+
+## Dictionary (字典)
+
+## Set (集合)
+
++ `set`
++ `frozenset`
