--- a/_posts/2018-10-03-語法結構與基本資料型態（I）.md
+++ b/_posts/2018-10-03-語法結構與基本資料型態（I）.md
@@ -10,17 +10,111 @@ tags:
 + statement (陳述)
 + expression (運算式)
 
-## Numbers (數字)
+---
 
-+ `int`
-+ `float`
-+ `complex`
+## Number (數字)
 
-## Strings (字串)
+### `int`
 
-## Lists (串列)
+```
+>>> type(1)
+<class 'int'>
+```
 
-## Tuples (元組)
+### `float`
+
+```
+>>> type(1.0)
+<class 'float'>
+```
+
+### `complex`
+
+```
+>>> type(1j)
+<class 'complex'>
+>>> type((1+0j))
+<class 'complex'>
+```
+
+---
+
+## String (字串)
+
+### Single quote (單引號)
+
+```python3
+'This is a string'
+```
+
+```
+>>> 'It's great'
+SyntaxError: EOL while scanning string literal
+```
+
+### Double quote (雙引號)
+
+```python3
+"This is a string"
+```
+
+```
+>>> "My name is "阿吉""
+SyntaxError: invalid syntax
+```
+
+### Triple quote (三引號)
+
+可為連續三個**單**引號或**雙**引號
+
+```python3
+'''This is a string'''
+"""This is a string"""
+```
+
+要特別注意：在所有三引號內的空白或空行都會被視作字符
+
+```
+>>> '''
+... This is the second line
+... 
+... This is the fourth line
+... '''
+'\nThis is the second line\n\nThis is the fourth line\n'
+```
+
+### 分行
+
+過長的字串要怎麼分行呢？其中一種方法是利用 `\` (line break / line continuatoin)：
+
+```python3
+text = '台灣大學語言學研究所今年開了一門「\
+人文學群的Python程式入門，宗旨是希望用深入\
+簡單的方式讓沒有程式背景的人快速了解Python\
+程式語言的易學跟好用。'
+```
+
+但我個人更喜歡這種表達方式：
+
+```python3
+text = (
+    '台灣大學語言學研究所今年開了一門「'
+    '人文學群的Python程式入門，宗旨是希望用深入'
+    '簡單的方式讓沒有程式背景的人快速了解Python'
+    '程式語言的易學跟好用。'
+)
+
+```
+
+注意以上分行是沒有 `,` 的喔，不然就會變成 `tuple` 了！
+
+---
+
+## List (串列)
+
+---
+
+## Tuple (元組)
 
 ```
 >>> a = ('a', 'b')
@@ -40,9 +134,26 @@ tags:
 <class 'tuple'>
 ```
 
+---
+
 ## Dictionary (字典)
+
+---
 
 ## Set (集合)
 
-+ `set`
-+ `frozenset`
+### `set`
+
+```
+>>> a = {'a', 'b', 'c'}
+>>> type(a)
+<class 'set'>
+```
+
+```
+>>> a = {'a': 0, 'b': 1, 'c': 2}
+>>> type(a)
+<class 'dict'>
+```
+
+### `frozenset`
