--- a/_posts/2018-09-26-程式編寫與執行基本概念.md
+++ b/_posts/2018-09-26-程式編寫與執行基本概念.md
@@ -28,6 +28,9 @@ tags:
 - IronPython - 用.NET 實作的 Python
 - PyPy - 用 Python 實作的 Python
 
+> 延伸閱讀  
+[Python vs Cpython](#https://stackoverflow.com/q/17130975/1105489)
+
 ---
 
 ## 程式編寫
@@ -60,9 +63,40 @@ REPL (互動式視窗) 的全名為 Read-Eval-Print Loop
 
 ---
 
-## 延伸閱讀
+## 常見術語
 
-- [Python vs Cpython](#https://stackoverflow.com/q/17130975/1105489)
+以下常常出現在學習或討論上的名詞，了解其背後含義即可，不用刻意背下來。
+
+### Expression (運算式)
+
+### Statement (陳述)
+
+### Script (腳本)
+
+### Module (模組)
+
+> A module is a file containing Python definitions and statements. The file name is the module name with the suffix .py appended.
+
+### Package (套件)
+
+> Packages are a way of structuring Python’s module namespace by using “dotted module names”.
+
+
+### Library (函式庫)
+
+### Framework (框架)
+
++ Django
++ Flask
++ Scrapy
++ Celery
+
+> 延伸閱讀  
+0. [What is the difference between a module and a script in Python?](https://stackoverflow.com/q/2996110/1105489)
+0. [Whats the difference between a module and a library in Python?](https://stackoverflow.com/q/19198166/1105489)
+0. [Difference between a module, library and a framework](https://stackoverflow.com/q/4099975/1105489)
+0. [Modules vs Packages vs Libraries in Python](https://knowpapa.com/modpaclib-py/)
+
 
 
 [wiki-interpreter]: https://zh.wikipedia.org/zh-tw/直譯器
