--- a/_posts/2018-10-03-語法結構與基本資料型態（I）.md
+++ b/_posts/2018-10-03-語法結構與基本資料型態（I）.md
@@ -3,12 +3,11 @@ layout: post_pfh
 date:   2018-10-03 00:00:00 +0800
 categories: content
 tags:
-  - Python3
+  - python
 ---
 
-+ module (模組)
-+ statement (陳述)
-+ expression (運算式)
+
+以下是 Python 核心的 data type (資料型別)，中文翻譯參考就好，不用特別去記。
 
 ---
 
@@ -43,7 +42,7 @@ tags:
 
 ### Single quote (單引號)
 
-```python3
+```python
 'This is a string'
 ```
 
@@ -54,7 +53,7 @@ SyntaxError: EOL while scanning string literal
 
 ### Double quote (雙引號)
 
-```python3
+```python
 "This is a string"
 ```
 
@@ -67,7 +66,7 @@ SyntaxError: invalid syntax
 
 可為連續三個**單**引號或**雙**引號
 
-```python3
+```python
 '''This is a string'''
 """This is a string"""
 ```
@@ -87,7 +86,7 @@ SyntaxError: invalid syntax
 
 過長的字串要怎麼分行呢？其中一種方法是利用 `\` (line break / line continuatoin)：
 
-```python3
+```python
 text = '台灣大學語言學研究所今年開了一門「\
 人文學群的Python程式入門，宗旨是希望用深入\
 簡單的方式讓沒有程式背景的人快速了解Python\
@@ -96,14 +95,13 @@ text = '台灣大學語言學研究所今年開了一門「\
 
 但我個人更喜歡這種表達方式：
 
-```python3
+```python
 text = (
     '台灣大學語言學研究所今年開了一門「'
     '人文學群的Python程式入門，宗旨是希望用深入'
     '簡單的方式讓沒有程式背景的人快速了解Python'
     '程式語言的易學跟好用。'
 )
-
 ```
 
 注意以上分行是沒有 `,` 的喔，不然就會變成 `tuple` 了！
@@ -111,6 +109,50 @@ text = (
 ---
 
 ## List (串列)
+
+Python 中的 `list` 是非常有彈性的，長度不用固定且可以隨時增加、修改或刪除其中的元素。
+
+### Mutable (可變性)
+
+```
+>>> a = ['a', 'b', 'c', 'd', 'e''']
+>>> a[2]
+'b'
+>>> a[2] = 'x'
+>>> a[2]
+'x'
+>>> a
+['a', 'x', 'c', 'd', 'e''']
+```
+
+### Heterogeneous (異質性)
+
+每一個元素都可以為不同的 `type`
+
+```python
+a = [100, 'Aji', None, [1, 2, 3]]
+```
+
+如果今天有需要強制某個 `list` 所有元素的 `type` 皆為相同的話，可以利用內建函示 [`array`](https://docs.python.org/3/library/array.html)
+
+假設我們要確保某個 `array` 的元素都是 `int`，可以利用下列方式：
+
+```python
+from array import array
+
+a = array('i')  # 'i' 代表 Integer
+```
+
+如此一來便能確保非 `int` 的資料不會被意外加入
+
+```
+>>> a.append(1)
+>>> a
+array('i', [1])
+>>> a.append('a')
+TypeError: an integer is required
+
+```
 
 ---
 
@@ -138,18 +180,24 @@ text = (
 
 ## Dictionary (字典)
 
+key-value pair
+
 ---
 
 ## Set (集合)
 
 ### `set`
 
+`set` 的表示方式為 `{}`，跟 `dict` 有點像，不過 `dict` 一定是 key-value 為一組，注意不要眼花了。
+
+這是 `set`
 ```
 >>> a = {'a', 'b', 'c'}
 >>> type(a)
 <class 'set'>
 ```
 
+這是 `dict`
 ```
 >>> a = {'a': 0, 'b': 1, 'c': 2}
 >>> type(a)
@@ -157,3 +205,38 @@ text = (
 ```
 
 ### `frozenset`
+
+**Hashable**
+
+```
+>>> key = set(('a', 'b', 'c'))
+>>> dic[key] = 'some value'
+TypeError: unhashable type: 'set'
+```
+
+```
+>>> key = frozenset(('a', 'b', 'c'))
+>>> dic[key] = 'some value'
+>>> dic[key]
+'some value'
+```
+
+**Immutable**
+
+```
+>>> set(set().__dir__()) - set(frozenset().__dir__())
+{'__iand__',
+ '__ior__',
+ '__isub__',
+ '__ixor__',
+ 'add',
+ 'clear',
+ 'difference_update',
+ 'discard',
+ 'intersection_update',
+ 'pop',
+ 'remove',
+ 'symmetric_difference_update',
+ 'update'}
+```
+
