--- a/_posts/2018-10-17-語法結構與基本資料型態（II）.md
+++ b/_posts/2018-10-17-語法結構與基本資料型態（II）.md
@@ -5,3 +5,25 @@ categories: content
 tags:
   - Python3
 ---
+
+Polymorphism (多型態)
+
+`-`
+
+`int`
+
+```
+>>> 5 - 3
+2
+```
+
+`set`
+
+```
+>>> set((1, 2, 3)) - set((1, 2))
+>>> {3}
+```
+
+`+`
+
+`int`
