--- a/_posts/2018-10-03-語法結構與基本資料型態（I）.md
+++ b/_posts/2018-10-03-語法結構與基本資料型態（I）.md
@@ -11,7 +11,7 @@ tags:
 
 ---
 
-## Number (數字)
+## Numbers (數字)
 
 ### `int`
 
@@ -38,7 +38,7 @@ tags:
 
 ---
 
-## String (字串)
+## Strings (字串)
 
 ### Single quote (單引號)
 
@@ -108,7 +108,7 @@ text = (
 
 ---
 
-## List (串列)
+## Lists (串列)
 
 Python 中的 `list` 是非常有彈性的，長度不用固定且可以隨時增加、修改或刪除其中的元素。
 
@@ -156,7 +156,7 @@ TypeError: an integer is required
 
 ---
 
-## Tuple (元組)
+## Tuples (元組)
 
 ```
 >>> a = ('a', 'b')
@@ -178,13 +178,36 @@ TypeError: an integer is required
 
 ---
 
-## Dictionary (字典)
+## Dictionaries (字典)
 
-key-value pair
+`dict` 為 *鍵*-*值* (key-value)一組的資料型態，只要是可以被hash的物件都可以做為 `dict` 的 key，例：
 
+```
+profile = {
+    'institute': 'Graduate Institute of Linguistics',
+    'classrooms': [304, 305],
+    'faculties': {
+        {
+            'name': 'shukai',
+            'gender': 'male',
+        },
+        {
+            'name': 'limay',
+            'gender': 'female',
+        }
+    }
+}
+```
+
+像是 `list` 或 `set` 此類不可被 hash 的物件就不可以當作 key
+
+```
+>>> d = {['a', 'b']: 'foo'}
+TypeError: unhashable type: 'list'
+```
 ---
 
-## Set (集合)
+## Sets (集合)
 
 ### `set`
 
@@ -206,37 +229,41 @@ key-value pair
 
 ### `frozenset`
 
+基本上跟 `set` 是一樣的東西，其不同之處為 `frozenset` 是可變 (mutable) 以及 可被 hash (雜湊) 的。
+
 **Hashable**
 
 ```
->>> key = set(('a', 'b', 'c'))
->>> dic[key] = 'some value'
+>>> hash(set(('a', 'b', 'c')))
 TypeError: unhashable type: 'set'
-```
-
-```
->>> key = frozenset(('a', 'b', 'c'))
->>> dic[key] = 'some value'
->>> dic[key]
-'some value'
+>>> hash(set(('a', 'b', 'c')))
+-7811812079328027595
 ```
 
 **Immutable**
 
+`set` 具有 `add`, `clear`, `pop` 等 method，讓其中元素可作調整，而 `frozenset` 因爲不可變，所以也不具有這類方法。 詳情請見
+[下一章節]({% post_url PythonForHumanities/2018-10-17-語法結構與基本資料型態（II）%})。
+
+---
+
+## Booleans (布林)
+
+`True` 或 `False`
+
 ```
->>> set(set().__dir__()) - set(frozenset().__dir__())
-{'__iand__',
- '__ior__',
- '__isub__',
- '__ixor__',
- 'add',
- 'clear',
- 'difference_update',
- 'discard',
- 'intersection_update',
- 'pop',
- 'remove',
- 'symmetric_difference_update',
- 'update'}
+>>> type(True)
+bool
+>>> type(False)
+bool
+```
+
+## None
+
+`None` 就是空值，它的 `type` 為 `NoneType`
+
+```
+>>> type(None)
+NoneType
 ```
 
