frozensets are immutable!!!

--- a/_posts/2018-10-03-語法結構與基本資料型態（I）.md
+++ b/_posts/2018-10-03-語法結構與基本資料型態（I）.md
@@ -229,7 +229,7 @@ TypeError: unhashable type: 'list'
 
 ### `frozenset`
 
-基本上跟 `set` 是一樣的東西，其不同之處為 `frozenset` 是可變 (mutable) 以及 可被 hash (雜湊) 的。
+基本上跟 `set` 是一樣的東西，其不同之處為 `frozenset` 是不可變 (immutable) 以及 可被 hash (雜湊) 的。
 
 **Hashable**
 
