--- a/_posts/2018-10-17-語法結構與基本資料型態（II）.md
+++ b/_posts/2018-10-17-語法結構與基本資料型態（II）.md
@@ -6,6 +6,15 @@ tags:
   - Python3
 ---
 
+## Comprehension
+
+### list comprehensoin
+
+### dict comprehensoin
+
+### set comprehensoin
+
+
 Polymorphism (多型態)
 
 `-`
