--- a/_posts/2018-10-03-資料型態介紹.md
+++ b/_posts/2018-10-03-資料型態介紹.md
@@ -243,7 +243,7 @@ TypeError: unhashable type: 'set'
 **Immutable**
 
 `set` 具有 `add`, `clear`, `pop` 等 method，讓其中元素可作調整，而 `frozenset` 因爲不可變，所以也不具有這類方法。 詳情請見
-[下一章節]({% post_url PythonForHumanities/2018-10-17-語法結構與基本資料型態（II）%})。
+[下一章節]({% post_url PythonForHumanities/2018-10-17-資料型態應用與流程控制 %})。
 
 ---
 
