--- a/lab/Week6/cloze_predef_ans.ipynb
+++ b/lab/Week6/cloze_predef_ans.ipynb
@@ -11,6 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "* [作業需求](#作業需求)\n",
     "* [作業目的](#作業目的)\n",
     "* [實作](#實作)\n",
@@ -18,8 +19,9 @@
     "  * 想法1：改變lyrics的字串型態\n",
     "  * 想法2：直接表徵剖析後的資料結構\n",
     "* [延伸挑戰](#延伸挑戰)\n",
-    "  * 亂數排列 & 多個填空字\n",
-    "  * 特定字群 & 選擇出題句"
+    "  * [亂數排列 & 多個填空字](#亂數排列-%26amp%3B-多個填空字)\n",
+    "  * [特定字群 & 選擇出題句](#特定字群-%26amp%3B-選擇出題句)\n",
+    "  * [依序出完所有歌詞](#依序出完所有歌詞)"
    ]
   },
   {
@@ -40,7 +42,9 @@
    "metadata": {},
    "source": [
     "## 作業目的\n",
-    "第六週的主題是物件方法。在課堂中，我們介紹了各資料型態（strings, list, dictionary等）中，較常使用的幾項方法。這項作業除了讓同學知道在程式中如何使用物件方法外，歌詞字串同時具有填空字和歌詞的訊息，所以需要用字串的切分方法（.split()）做簡單的**資料剖析**。程式的流程將一步步的操弄物件表徵：（1）從歌詞作為字串（string），到（2）歌詞句的清單（list），到（3）清單排序，並（4）擷取最後一個元素（element），提取（5）填空字與歌詞，（6）產生填空句。"
+    "第六週的主題是物件方法。在課堂中，我們介紹了各資料型態（strings, list, dictionary等）中，較常使用的幾項方法。這項作業除了讓同學知道在程式中如何使用物件方法外，歌詞字串同時具有填空字和歌詞的訊息，所以需要用字串的切分方法（.split()）做簡單的**資料剖析**。程式的流程將一步步的操弄物件表徵：（1）從歌詞作為字串（string），到（2）歌詞句的清單（list），到（3）清單排序，並（4）擷取最後一個元素（element），提取（5）填空字與歌詞，（6）產生填空句。\n",
+    "\n",
+    "這週的作業只從**多句歌詞中選出「一句」作為出題句**。由於選擇句子的方式是用字串排序後的最後一個元素，所以**程式每次選擇到的句子都是固定的**。在作業的例子裡，剛好也是第一句。如果同學想要隨機選出一句，或依序出完所有的歌詞，請參考[延伸挑戰](#延伸挑戰)。"
    ]
   },
   {
@@ -88,7 +92,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`lyrics` 是一個多行字串，每一行就是一筆出題資料，每筆出題資料都有兩個欄位（填空字與歌詞），並以逗號分隔。從debug print可以看得出來，我們所有需要操弄的資料，已經全部表徵在這個字串裡，其中分行字元是以`\\n`表示。而現在的問題是如何把這個一序列的字串，變成可操作的資料結構。"
+    "---\n",
+    "\n",
+    "`lyrics` 是一個多行字串，每一行就是一筆出題資料，每筆出題資料都有兩個欄位（填空字與歌詞），並以逗號分隔。從debug print可以看得出來，我們所有需要操弄的資料，已經全部表徵在這個字串裡，其中分行字元是以`\\n`表示。而現在的問題是如何把這個一序列的字串，變成可操作的資料結構。\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -129,13 +137,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
     "在這個步驟中，程式已經將`lyrics`用分行符號（\\n）切分成出題資料清單（`sentence_list`），並讓清單中的元素按照字串排序的規則排序。排序後，我們只取用排序的最後一項元素當作接下來的出題資料來源（`line`）。\n",
-    "在這個例子裡，字串排序是固定的，所以每次執行程式都會是同一個句子被選出來。"
+    "在這個例子裡，字串排序是固定的，所以每次執行程式都會是同一個句子被選出來。\n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +179,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "接著，我們把`line`的內容，用逗號作為分隔符號，切成一個有兩個元素的清單，並命名為`item_pair`。在item_pair裡面，第一個元素就是填空字（`cloze_char`），第二個元素就是歌詞句（`sentence_x`）。最後我們仍需要填空句（`cloze_sentence`），它的內容就只需用字串的取代方法（`.replace()`）把填空字取代成底線即可。"
+    "---\n",
+    "\n",
+    "接著，我們把`line`的內容，用逗號作為分隔符號，切成一個有兩個元素的清單，並命名為`item_pair`。在item_pair裡面，第一個元素就是填空字（`cloze_char`），第二個元素就是歌詞句（`sentence_x`）。最後我們仍需要填空句（`cloze_sentence`），它的內容就只需用字串的取代方法（`.replace()`）把填空字取代成底線即可。\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -179,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +240,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`cloze_sentence`和`cloze_char`是最後在互動階段會用到的兩個變項。最後這階段只是呈現填空句，收使用者輸入，並用條件式判斷對錯並回饋。"
+    "---\n",
+    "\n",
+    "`cloze_sentence`和`cloze_char`是最後在互動階段會用到的兩個變項。最後這階段只是呈現填空句，收使用者輸入，並用條件式判斷對錯並回饋。\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -250,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +307,7 @@
        " '你在的世界會不會很靠近水星']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,12 +320,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "這種資料的結構比較扁平，在某些狀況下是好的。但也因資料結構扁平，使得如果我們要改變出題資料的順序，就不再能直接用清單的排序功能了。例如，從以下例子看到的，直接清單排序會打亂填空字和歌詞之間的順序關係。"
+    "---\n",
+    "\n",
+    "這種資料的結構比較扁平，在某些狀況下是好的。但也因資料結構扁平，使得如果我們要改變出題資料的順序，就不再能直接用清單的排序功能了。例如直接清單排序會打亂填空字和歌詞之間的順序關係。\n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -326,12 +350,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "當然，程式和資料表徵間的互動有很高的彈性。上述的資料表徵方法，雖然不能用原本的程式來排序、取元素，但只要稍做修改，還是完全合理的資料表達方法。（以下程式僅供參考）"
+    "---\n",
+    "\n",
+    "當然，程式和資料表徵間的互動有很高的彈性。上述的資料表徵方法，雖然不能用原本的程式來排序、取元素，但只要稍做修改，還是完全合理的資料表達方法。（以下程式僅供參考）\n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +386,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "上述的程式用到迴圈，並利用填空字和歌詞句在`items`中位置是兩兩出現的特性，以2作為索引遞進（increment）的單位（`range(0, len(items), 2)`），順序取出填空字與歌詞句。另外，由於填空字與歌詞句的搭配關係是固定的，原則上我們不希望歌詞句或填空字可以被獨立改變，亦即每筆出題資料是不可變的，所以這裡把每個出題資料都表徵成一個tuple。之後經過同樣的排序步驟，最後的`item_pair`就和原本作業範例中的`item_pair`相同，可以接著做後續的操作。"
+    "---\n",
+    "\n",
+    "上述的程式用到迴圈，並利用填空字和歌詞句在`items`中位置是兩兩出現的特性，以2作為索引遞進（increment）的單位（`range(0, len(items), 2)`），順序取出填空字與歌詞句。另外，由於填空字與歌詞句的搭配關係是固定的，原則上我們不希望歌詞句或填空字可以被獨立改變，亦即每筆出題資料是不可變的，所以這裡把每個出題資料都表徵成一個tuple。之後經過同樣的排序步驟，最後的`item_pair`就和原本作業範例中的`item_pair`相同，可以接著做後續的操作。\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -370,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,6 +418,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
     "這種資料表徵的方法是對開發者最「仁慈」的方法，事實上現在也滿常看到這種資料型態（例如之後可能會談到的JSON資料格式）。這種資料格式直接就是[想法1][link]中的`items`。所以只要按照如想法1後續的程式操作方法，也是完全合理的資料結構。\n",
     "\n",
     "[link]:#%E6%83%B3%E6%B3%951%EF%BC%9A%E6%94%B9%E8%AE%8Alyrics%E7%9A%84%E5%AD%97%E4%B8%B2%E5%9E%8B%E6%85%8B"
@@ -395,12 +429,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "事實上，如果都可以直接表徵資料結構，我們甚至可以把上述的結構賦予巢套層級，它會更接近之後程式需要的樣子，例如："
+    "事實上，如果都可以直接表徵資料結構，我們甚至可以把上述的結構賦予巢套層級，它會更接近之後程式需要的樣子，例如：\n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -425,12 +461,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "這個資料表徵和`item_list`幾乎是完全一樣的，它同樣也可以直接排序"
+    "---\n",
+    "\n",
+    "這個資料表徵和`item_list`幾乎是完全一樣的，它同樣也可以直接排序\n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +493,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "之後就可以當作原始作業範例的`item_pair`繼續後續操作。"
+    "---\n",
+    "\n",
+    "之後就可以當作原始作業範例的`item_pair`繼續後續操作。\n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -486,7 +530,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "以下分別將延伸挑戰的出題形式分成兩種實作，（1）亂數排列和多個填空字；以及（2）特定字群以及選擇出題句。延伸挑戰所用的程式語法可能不見得只在第六週前所談到的內容，尤其是已經用到迴圈和內建的random package。"
+    "以下分別將延伸挑戰的出題形式分成兩種實作，（1）亂數排列和多個填空字；（2）特定字群以及選擇出題句以及（3）依序出完所有歌詞。延伸挑戰所用的程式語法可能不見得只在第六週前所談到的內容，尤其是已經用到迴圈和內建的random package。"
    ]
   },
   {
@@ -505,8 +549,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[DEBUG] sentence_list, before shuffling: ['路很久,去學校的路很久沒走', '也換了,最近也換了新的工作', '缺少,所有的追求是不是缺少了什麼', '風平浪竟,想像著生活風平浪靜', '想起,打開了窗戶突然想起', '很靠近水星,你在的世界會不會很靠近水星']\n",
-      "[DEBUG] sentence_list, after shuffling: ['風平浪竟,想像著生活風平浪靜', '缺少,所有的追求是不是缺少了什麼', '想起,打開了窗戶突然想起', '也換了,最近也換了新的工作', '很靠近水星,你在的世界會不會很靠近水星', '路很久,去學校的路很久沒走']\n",
+      "[DEBUG] sentence_list, before shuffling: ['路很久,去學校的路很久沒走', '也換了,最近也換了新的工作', '缺少,所有的追求是不是缺少了什麼', '風平浪靜,想像著生活風平浪靜', '想起,打開了窗戶突然想起', '很靠近水星,你在的世界會不會很靠近水星']\n",
+      "[DEBUG] sentence_list, after shuffling: ['缺少,所有的追求是不是缺少了什麼', '風平浪靜,想像著生活風平浪靜', '想起,打開了窗戶突然想起', '很靠近水星,你在的世界會不會很靠近水星', '也換了,最近也換了新的工作', '路很久,去學校的路很久沒走']\n",
       "[DEBUG] cloze_sentence: 去學校的______沒走\n",
       "--- 歌詞填空產生器 ---\n",
       "去學校的______沒走\n"
@@ -569,12 +613,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 特定字群及選擇出題句"
+    "### 特定字群 & 選擇出題句"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -589,24 +633,24 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "選擇題數(1-6) 6\n"
+      "選擇題數(1-6) 2\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[DEBUG] cloze_sentence: 最近也換了新__工作\n",
-      "[DEBUG] cloze_chars: 的\n",
+      "[DEBUG] cloze_sentence: 去__校____很久沒走\n",
+      "[DEBUG] cloze_chars: 學的路\n",
       "--- 歌詞填空產生器 ---\n",
-      "最近也換了新__工作\n"
+      "去__校____很久沒走\n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "請依序填入空格中的字是： 的\n"
+      "請依序填入空格中的字是： 學的路\n"
      ]
     },
     {
@@ -671,6 +715,150 @@
     "    print(\"答對了！\")\n",
     "else:\n",
     "    print(\"答案應該是「{}」\".format(cloze_chars))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 依序出完所有歌詞"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 歌詞填空產生器 ---\n",
+      "去學校的__很久沒走\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "請填入空格中的字是： 路\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "答對了！\n",
+      "最近也__了新的工作\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "請填入空格中的字是： 換\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "答對了！\n",
+      "所有的追求是不是__少了什麼\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "請填入空格中的字是： 缺\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "答對了！\n",
+      "想像著生活風__浪靜\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "請填入空格中的字是： 平\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "答對了！\n",
+      "打開了窗戶突然__起\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "請填入空格中的字是： 想\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "答對了！\n",
+      "你在的世界會不會很靠近__星\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "請填入空格中的字是： 水\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "答對了！\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Data Section\n",
+    "lyrics = \"\"\"路,去學校的路很久沒走\n",
+    "換,最近也換了新的工作\n",
+    "缺,所有的追求是不是缺少了什麼\n",
+    "平,想像著生活風平浪靜\n",
+    "想,打開了窗戶突然想起\n",
+    "水,你在的世界會不會很靠近水星\"\"\"\n",
+    "\n",
+    "## Cloze sentence generation (P)\n",
+    "sentence_list = lyrics.split(\"\\n\")\n",
+    "sentence_list.reverse()\n",
+    "\n",
+    "print(\"--- 歌詞填空產生器 ---\")\n",
+    "while sentence_list:\n",
+    "    line = sentence_list.pop()\n",
+    "    item_pair = line.split(\",\")\n",
+    "    sentence_x = item_pair[1]\n",
+    "    cloze_char = item_pair[0]\n",
+    "    cloze_sentence = sentence_x.replace(cloze_char, \"__\")\n",
+    "\n",
+    "    ## Display the cloze (O)  \n",
+    "    print(cloze_sentence)\n",
+    "\n",
+    "    ## User Input (I)\n",
+    "    ans_char = input(\"請填入空格中的字是：\")\n",
+    "\n",
+    "    ## Check the answer (P)\n",
+    "    if ans_char == cloze_char:\n",
+    "        print(\"答對了！\")\n",
+    "    else:\n",
+    "        print(\"答案應該是「{}」\".format(cloze_char))\n"
    ]
   },
   {
