--- a/lab/Week6/cloze_predef_ans.ipynb
+++ b/lab/Week6/cloze_predef_ans.ipynb
@@ -42,9 +42,9 @@
    "metadata": {},
    "source": [
     "## 作業目的\n",
-    "第六週的主題是物件方法。在課堂中，我們介紹了各資料型態（strings, list, dictionary等）中，較常使用的幾項方法。這項作業除了讓同學知道在程式中如何使用物件方法外，歌詞字串同時具有填空字和歌詞的訊息，所以需要用字串的切分方法（.split()）做簡單的**資料剖析**。程式的流程將一步步的操弄物件表徵：（1）從歌詞作為字串（string），到（2）歌詞句的清單（list），到（3）清單排序，並（4）擷取最後一個元素（element），提取（5）填空字與歌詞，（6）產生填空句。\n",
+    "第六週的主題是物件方法。在課堂中，我們認識各資料型態（strings, list, dictionary等）的常見方法。這項作業除了讓同學知道在程式中如何使用物件方法外，作業中的資料是一個多行歌詞字串，它同時具有填空字和歌詞的訊息，所以需要用到字串的切分方法（.split()）做簡單的**資料剖析**。程式一步步的操弄物件表徵：從（1）歌詞作為字串（string），到（2）歌詞句的清單（list），到（3）清單排序，並（4）擷取最後一個元素（element），（5）提取填空字與歌詞，（6）產生填空句。\n",
     "\n",
-    "這週的作業只從**多句歌詞中選出「一句」作為出題句**。由於選擇句子的方式是用字串排序後的最後一個元素，所以**程式每次選擇到的句子都是固定的**。在作業的例子裡，剛好也是第一句。如果同學想要隨機選出一句，或依序出完所有的歌詞，請參考[延伸挑戰](#延伸挑戰)。"
+    "這週的作業只從**多句歌詞中選出「一句」作為出題句**。由於選擇句子的方式是用字串排序後的最後一個元素，所以**程式每次選擇到的句子都是固定的**。在作業的例子裡，選出的句子剛好也是原歌詞的第一句。如果同學想要隨機選出一句，或依序出完所有的歌詞，請參考[延伸挑戰](#延伸挑戰)。"
    ]
   },
   {
@@ -140,7 +140,7 @@
     "---\n",
     "\n",
     "在這個步驟中，程式已經將`lyrics`用分行符號（\\n）切分成出題資料清單（`sentence_list`），並讓清單中的元素按照字串排序的規則排序。排序後，我們只取用排序的最後一項元素當作接下來的出題資料來源（`line`）。\n",
-    "在這個例子裡，字串排序是固定的，所以每次執行程式都會是同一個句子被選出來。\n",
+    "在這個例子裡，字串排序是固定的，所以每次執行時，程式都會選出同一個句子。\n",
     "\n",
     "---"
    ]
@@ -181,7 +181,7 @@
    "source": [
     "---\n",
     "\n",
-    "接著，我們把`line`的內容，用逗號作為分隔符號，切成一個有兩個元素的清單，並命名為`item_pair`。在item_pair裡面，第一個元素就是填空字（`cloze_char`），第二個元素就是歌詞句（`sentence_x`）。最後我們仍需要填空句（`cloze_sentence`），它的內容就只需用字串的取代方法（`.replace()`）把填空字取代成底線即可。\n",
+    "接著，我們用逗號作為分隔符號，把`line`的內容切成一個有兩個元素的清單，並命名為`item_pair`。在`item_pair`裡，第一個元素就是填空字（`cloze_char`），第二個元素就是歌詞句（`sentence_x`）。最後我們仍需要填空句（`cloze_sentence`），它的內容就只需用字串的取代方法（`.replace()`）把填空字取代成底線即可。\n",
     "\n",
     "---"
    ]
@@ -322,7 +322,7 @@
    "source": [
     "---\n",
     "\n",
-    "這種資料的結構比較扁平，在某些狀況下是好的。但也因資料結構扁平，使得如果我們要改變出題資料的順序，就不再能直接用清單的排序功能了。例如直接清單排序會打亂填空字和歌詞之間的順序關係。\n",
+    "這種資料的結構比較扁平，在某些狀況下是好的。但也因資料結構扁平，使得我們不再能直接用清單的排序功能來改變出題資料的順序。如下面的例子所示，直接排序清單會打亂填空字和歌詞之間的順序關係。\n",
     "\n",
     "---"
    ]
@@ -352,7 +352,7 @@
    "source": [
     "---\n",
     "\n",
-    "當然，程式和資料表徵間的互動有很高的彈性。上述的資料表徵方法，雖然不能用原本的程式來排序、取元素，但只要稍做修改，還是完全合理的資料表達方法。（以下程式僅供參考）\n",
+    "當然，程式和資料表徵間的互動是彈性的。雖然我們不能用原本的程式來操作上述的資料表徵（如排序、取元素），但只要稍做修改，還是完全合理的資料表達方法。（以下程式僅供參考）\n",
     "\n",
     "---"
    ]
@@ -388,7 +388,7 @@
    "source": [
     "---\n",
     "\n",
-    "上述的程式用到迴圈，並利用填空字和歌詞句在`items`中位置是兩兩出現的特性，以2作為索引遞進（increment）的單位（`range(0, len(items), 2)`），順序取出填空字與歌詞句。另外，由於填空字與歌詞句的搭配關係是固定的，原則上我們不希望歌詞句或填空字可以被獨立改變，亦即每筆出題資料是不可變的，所以這裡把每個出題資料都表徵成一個tuple。之後經過同樣的排序步驟，最後的`item_pair`就和原本作業範例中的`item_pair`相同，可以接著做後續的操作。\n",
+    "上述的程式用到迴圈，並利用填空字和歌詞句在`items`中位置是兩兩成對出現的特性，以2作為索引遞進（increment）單位（`range(0, len(items), 2)`），順序取出填空字與歌詞句。另外，由於填空字與歌詞句的搭配關係是固定的，原則上我們不希望歌詞句或填空字可以被獨立改變，所以把每個出題資料都表徵成一個tuple。之後經過同樣的排序步驟，最後的`item_pair`就和原本作業範例中的`item_pair`相同，可以接著做後續的操作。\n",
     "\n",
     "---"
    ]
@@ -429,9 +429,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "事實上，如果都可以直接表徵資料結構，我們甚至可以把上述的結構賦予巢套層級，它會更接近之後程式需要的樣子，例如：\n",
-    "\n",
-    "---"
+    "事實上，如果都可以直接表徵資料結構，我們甚至可以把上述的結構賦予巢套層級，它會更接近之後程式需要的樣子，例如：\n"
    ]
   },
   {
@@ -463,9 +461,7 @@
    "source": [
     "---\n",
     "\n",
-    "這個資料表徵和`item_list`幾乎是完全一樣的，它同樣也可以直接排序\n",
-    "\n",
-    "---"
+    "這個資料表徵和`item_list`幾乎是完全一樣的，它同樣也可以直接排序："
    ]
   },
   {
@@ -495,7 +491,7 @@
    "source": [
     "---\n",
     "\n",
-    "之後就可以當作原始作業範例的`item_pair`繼續後續操作。\n",
+    "這裡的`item_pair`可以當成原始作業範例的`item_pair`，接著完成後續操作。\n",
     "\n",
     "---"
    ]
@@ -511,12 +507,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "之所以一開始要用字串表徵，是因為很多時候資料檔本身就只能是字串，例如常見的逗號分隔檔（comma-separated values, CSV）。\n",
+    "作業中的`lyrics`要用字串表徵的原因，是由於資料檔本身常常是純文字檔，例如常見的逗號分隔檔（comma-separated values, CSV）。\n",
     "我們現在的作業、範例都直接把資料內容寫在程式中，並叫它Data Section。\n",
-    "但在實務上，Data Section可能是存放在另一個檔案，在程式執行時才載入的。\n",
-    "所以原始作業範例中的`lyrics`字串比較接近從文字檔中直接讀進來的樣子。\n",
-    "當然，現在資料處理碰到的格式相當多元，不見得一定只能從CSV檔的邏輯著手。所以各種資料表徵的方法都是可能的，\n",
-    "只是之後接著的程式操作形式會稍有不同而已。"
+    "但在實際應用上，Data Section中的資料常存放於另一個檔案，在程式執行時才載入的。\n",
+    "所以用字串來表達`lyrics`就很接近從文字檔中直接讀進來的樣子。\n",
+    "當然，在資料處理的情境裡會碰到相當多元的格式，不見得一定只有CSV，所以各種資料表徵的方法都是可能的。資料表徵的方法不同，之後接著的程式操作型態就會不同。"
    ]
   },
   {
@@ -530,7 +525,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "以下分別將延伸挑戰的出題形式分成兩種實作，（1）亂數排列和多個填空字；（2）特定字群以及選擇出題句以及（3）依序出完所有歌詞。延伸挑戰所用的程式語法可能不見得只在第六週前所談到的內容，尤其是已經用到迴圈和內建的random package。"
+    "以下分別將延伸挑戰的出題形式分成三種實作(implementation)，（1）亂數排列和多個填空字；（2）特定字群以及選擇出題句以及（3）依序出完所有歌詞。延伸挑戰所用的程式語法可能不見得限定在第六週前談到的內容，尤其是迴圈和內建的random package。"
    ]
   },
   {
